--- a/app/assets/javascripts/page/playgame.js.erb
+++ b/app/assets/javascripts/page/playgame.js.erb
@@ -1,6 +1,11 @@
 // upon room entry
 $(".answerfield").val("");
 $(".ads").append($("#gamead"));
+function hideAlerts() {
+  $(".notice").fadeOut("slow");
+  $(".alert").fadeOut("slow");
+}
+setTimeout(hideAlerts, 5000);
 
 $("#r1playbutton").click(function () {
   $("#r1play").show();
