--- a/app/assets/stylesheets/universal.css.scss
+++ b/app/assets/stylesheets/universal.css.scss
@@ -11,6 +11,7 @@ body {
 }
 
 #alerts {
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   bottom: 80px;
@@ -125,3 +126,7 @@ button, .button {
       button.disabled.alert:hover, button.disabled.alert:focus, button[disabled].alert:hover, button[disabled].alert:focus, .button.disabled.alert:hover, .button.disabled.alert:focus, .button[disabled].alert:hover, .button[disabled].alert:focus {
         background-color: #f04124; }
 
+.notice, .alert {
+  width: 100%;
+  margin: 0 auto;
+}
