--- a/app/views/games/_roundvotelong.html.erb
+++ b/app/views/games/_roundvotelong.html.erb
@@ -28,7 +28,7 @@
           You didn't enter an acro this round.
         <% end %>
         <div class="answervotedfor" id="r1votedfor">
-          <% if @currentgamedata.r1votedfor == nil %>
+          <% if @currentgamedata.r1votedfor == 0 %>
             Your vote: You haven't voted yet...
           <% else %>
             Your vote: "<%= Gamedata.where(:game_id => @game.id).where(:user_id => @currentgamedata.r1votedfor).first.r1answer %>"
@@ -54,7 +54,7 @@
           You didn't enter an acro this round.
         <% end %>
         <div class="answervotedfor" id="r2votedfor">
-          <% if @currentgamedata.r2votedfor == nil %>
+          <% if @currentgamedata.r2votedfor == 0 %>
             Your vote: You haven't voted yet...
           <% else %>
             Your vote: "<%= Gamedata.where(:game_id => @game.id).where(:user_id => @currentgamedata.r2votedfor).first.r2answer %>"
@@ -80,7 +80,7 @@
           You didn't enter an acro this round.
         <% end %>
         <div class="answervotedfor" id="r3votedfor">
-          <% if @currentgamedata.r3votedfor == nil %>
+          <% if @currentgamedata.r3votedfor == 0 %>
             Your vote: You haven't voted yet...
           <% else %>
             Your vote: "<%= Gamedata.where(:game_id => @game.id).where(:user_id => @currentgamedata.r3votedfor).first.r3answer %>"
@@ -106,7 +106,7 @@
           You didn't enter an acro this round.
         <% end %>
         <div class="answervotedfor" id="r4votedfor">
-          <% if @currentgamedata.r4votedfor == nil %>
+          <% if @currentgamedata.r4votedfor == 0 %>
             Your vote: You haven't voted yet...
           <% else %>
             Your vote: "<%= Gamedata.where(:game_id => @game.id).where(:user_id => @currentgamedata.r4votedfor).first.r4answer %>"
@@ -132,7 +132,7 @@
           You didn't enter an acro this round.
         <% end %>
         <div class="answervotedfor" id="r5votedfor">
-          <% if @currentgamedata.r5votedfor == nil %>
+          <% if @currentgamedata.r5votedfor == 0 %>
             Your vote: You haven't voted yet...
           <% else %>
             Your vote: "<%= Gamedata.where(:game_id => @game.id).where(:user_id => @currentgamedata.r5votedfor).first.r5answer %>"
@@ -158,7 +158,7 @@
           You didn't enter an acro this round.
         <% end %>
         <div class="answervotedfor" id="r6votedfor">
-          <% if @currentgamedata.r6votedfor == nil %>
+          <% if @currentgamedata.r6votedfor == 0 %>
             Your vote: You haven't voted yet...
           <% else %>
             Your vote: "<%= Gamedata.where(:game_id => @game.id).where(:user_id => @currentgamedata.r6votedfor).first.r6answer %>"
@@ -184,7 +184,7 @@
           You didn't enter an acro this round.
         <% end %>
         <div class="answervotedfor" id="r7votedfor">
-          <% if @currentgamedata.r7votedfor == nil %>
+          <% if @currentgamedata.r7votedfor == 0 %>
             Your vote: You haven't voted yet...
           <% else %>
             Your vote: "<%= Gamedata.where(:game_id => @game.id).where(:user_id => @currentgamedata.r7votedfor).first.r7answer %>"
@@ -210,7 +210,7 @@
           You didn't enter an acro this round.
         <% end %>
         <div class="answervotedfor" id="r8votedfor">
-          <% if @currentgamedata.r8votedfor == nil %>
+          <% if @currentgamedata.r8votedfor == 0 %>
             Your vote: You haven't voted yet...
           <% else %>
             Your vote: "<%= Gamedata.where(:game_id => @game.id).where(:user_id => @currentgamedata.r8votedfor).first.r8answer %>"
