--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -13,7 +13,7 @@
 <% end %>
 
 <!-- //////////////// GAME VOTING ROUND //////////////////// -->
-<% if DateTime.now.utc >= @game.playendtime && DateTime.now.utc <= @game.voteendtime %>
+<% if DateTime.now.utc >= @game.playendtime && DateTime.now.utc < @game.voteendtime %>
   <% if @game.playercount < 3 %>
     Sorry, there weren't enough players to continue to the voting round.
   <% else %>
@@ -31,10 +31,10 @@
     Sorry, there weren't enough players to complete this game.
   <% else %>
     <!-- results code here -->
-    <% Gamedata.where(:game_id => @game.id).order('r1points DESC').each do |answer| %>
-    <%= answer.r1points %> votes for <%= User.where(:id => answer.user_id).first.username %>:
-        "<%= Obscenity.replacement(:stars).sanitize(answer.r1answer) %>"
-      </br>
+    <% if @game.length == "1hour" %>
+      <%= render "roundresultsshort" %>
+    <% elsif @game.length == "6hour" %>
+      <%= render "roundresultslong" %>
     <% end %>
   <% end %>
 <% end %>
